[package]
name = "notion-rs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.9"
serde = {version="1.0.136", features=["derive"] }
serde_json = "1.0.78"
tokio = {version="1.16.1", features = ["macros", "rt-multi-thread"]}
